# idh-prediction-template

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-model-to-vertex.yml  evaluate-model.yml  train-and-deploy.yml
docs/: index.html  search.js
docs/src/: idh.html
docs/src/idh/: config.html  gcp.html  model.html
docs/src/idh/gcp/: bigquery.html  setup.html
docs/src/idh/model/: endpoint.html  predict.html
sample_data/: idh_session.csv  no_idh_session.csv  payload.json
scripts/: deploy_model_to_vertex_ai.sh  evaluate_model.sh  readme.md  train_and_deploy.sh
scripts/app/: run_app.sh
scripts/model/: deploy_model_to_vertex.py  run_model_evaluation.py  run_model_training.py  setup_data.py
scripts/predict/: create_sample_csv.py  create_vertex_json.py  run_inference.py
src/idh/: config.py
src/idh/app/: csv_prediction.py
src/idh/data/: fetch.py  preprocess.py  session.py  utils.py
src/idh/gcp/: setup.py
src/idh/gcp/bigquery/: query.py  table_manager.py  tables.py
src/idh/gcp/storage/: data_schemas.py  utils.py
src/idh/model/: __init__.py  endpoint.py  predict.py
tests/: conftest.py
tests/idh/: test_config.py
tests/idh/app/: test_csv_prediction.py
tests/idh/data/: test_fetch.py  test_preprocess.py  test_session.py  test_utils.py
tests/idh/gcp/: test_setup.py
tests/idh/gcp/bigquery/: test_query.py  test_table_manager.py  test_tables.py
tests/idh/gcp/storage/: test_data_schemas.py  test_storage_utils.py
tests/idh/model/: test_endpoint.py  test_predict.py
(+3 files in other folders)
